# list-lm

./: .gitignore  CLAUDE.md  Makefile  README.md  model_data_list.json  pyproject.toml
.run/: 0 GUI App.run.xml  1 Generate README data.run.xml  2 Validate all.run.xml  2 Validate links.run.xml  2 Validate lm data.run.xml  2a Validate links.run.xml  2a Validate lm data.run.xml  3 Convert Markdown LM to JSON.run.xml  3 Convert Markdown links to JSON.run.xml
data/: .cache_arxiv.json
data/json/: all_links.json  dataset_links.json  documentation_links.json  gpu_profiling_links.json  model_data_list.json  model_links.json  optimizer_links.json  utils_links.json  visualization_links.json  vocabulary_links.json
data/readme/: dataset_links.md  documentation_links.md  gpu_profiling_links.md  language_models.md  model_links.md  optimizer_links.md  topic_links.md  utils_links.md  visualization_links.md  vocabulary_links.md
list_lm/: app.py  auto_add_links_app.py  auto_add_lm_data_app.py  convert_readme_to_json.py  data.py  data_manager.py  data_utils.py  generate_readme.py  log_utils.py  merge_json.py  ollama_client.py  parse_html.py  parse_links.py  parse_lm_data.py  parse_url.py  parser_links.py  parser_lm_data.py  prompt_template.py  requirements.in  requirements.txt  sort_readme.py  utils.py  validate_all.py  validate_data.py  validate_links.py  validate_lm_data.py
scripts/: merge.sh  run_auto_links.sh  run_auto_lm.sh  run_links.sh  sort_readme.py  validate_all.sh
