[project]
name = "list-lm"
version = "0.1.0"
description = "List of Language Models"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "loguru>=0.7.3,<1.0",
  "lxml>=6.0,<7.0",
  "pydantic>=2.12,<3.0",
  "pyperclip>=1.11,<2.0",
  "requests>=2.32,<3.0",
]

[dependency-groups]
dev = ["mypy>=1.19,<2.0", "ruff>=0.14.0,<1.0", "types-requests>=2.32,<3.0"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  "E",
  "F",
  "W",
  "I",
  "N",
  "YTT",
  "ANN",
  "S",
  "BLE",
  "B",
  "A",
  "EXE",
  "INP",
  "PIE",
  "T20",
  "PT",
  "Q",
  "SIM",
  "ARG",
  "PTH",
  "PGH",
  "RUF",
]
ignore = ["ANN401", "S101", "SIM118", "RUF005", "RUF010"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D101", "D102", "D103", "D106", "S105", "S106"]

[tool.ruff.lint.pep8-naming]
classmethod-decorators = [
  "classmethod",
  "classproperty",
  "pydantic.validator",
  "pydantic.root_validator",
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pycodestyle]
max-doc-length = 120

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.black]
line-length = 120
skip-string-normalization = false

[tool.isort]
atomic = true
profile = "black"
line_length = 120
multi_line_output = 3

[tool.mypy]
platform = "linux"
ignore_missing_imports = true
show_column_numbers = true
show_error_context = false
show_error_codes = true
follow_imports = "normal"
warn_return_any = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true
warn_unused_configs = true
# More type restrictions:
no_implicit_optional = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
